force-app/main/default/objects/Integration_Error_Log__e/Integration_Error_Log__e.object-meta.xml
<CustomObject>
    <label>Integration Error Log</label>
    <pluralLabel>Integration Error Logs</pluralLabel>
    <description>High-volume platform event published by service and batch layers when DML or callout failures occur. Subscriber trigger writes to Integration_Error_Log__c for persistent storage.</description>
</CustomObject>