force-app/main/default/objects/Integration_Error_Log__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Fully-qualified class and method name that published this error event. E.g. AccountService.syncCaseOwnerOnAccountOwnerChange</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>