force-app/main/default/objects/Integration_Error_Log__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce Record ID of the record that caused the DML failure. Null for non-DML errors (e.g. callout failures).</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>