force-app/main/default/objects/Integration_Error_Log__e/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Salesforce StatusCode enum value (e.g. FIELD_CUSTOM_VALIDATION_EXCEPTION) or HTTP status code for callout errors.</description>
    <label>Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>